@@ -3,6 +3,8 @@ ART 3.6
 * Allow saving of pivottable.js state
 * Allow modifying and saving of gridstack dashboard item positions
 * Added AUTOHEIGHT and AUTOWIDTH options for gridstack dashboard items
+* Provide record import/export to json
+* Updated yadcf
 
 ART 3.5
 * Add field to indicate use of groovy instead of sql in report source
